Change title; remove slides

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Internship at Open Webslides</title>
+  <title>CoCOS Madrid meeting</title>
 
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -12,20 +12,20 @@
 <body class="shower list">
   <header class="caption">
     <h1>Open Webslides</h1>
-    <h2>Internship 2018</h2>
+    <h2>CoCOS Madrid 2018</h2>
     <p>
-      <a href="https://www.linkedin.com/in/jasperdhaene/">Jasper D'haene</a> &amp;
+      <a href="https://be.linkedin.com/in/estherdeloof/">Esther De Loof</a> &amp;
       <a href="https://florian.dejonckhee.re/">Florian Dejonckheere</a>,
-      <a href="http://www.hogent.be/">Hogeschool Gent</a>
+      <a href="http://www.ugent.be/">Universiteit Gent</a>
     </p>
   </header>
 
   <section class="black title slide" id="title">
     <h2>Open Webslides</h2>
     <p>
-      <a href="https://www.linkedin.com/in/jasperdhaene/">Jasper D'haene</a>
-      &amp;
-      <a href="https://florian.dejonckhee.re/">Florian Dejonckheere</a>
+			<a href="https://be.linkedin.com/in/estherdeloof/">Esther De Loof</a>
+			&amp;
+			<a href="https://florian.dejonckhee.re/">Florian Dejonckheere</a>
     </p>
   </section>
 
@@ -40,7 +40,6 @@
       <li>Extra <strong>visibility</strong> by putting slides on the Web</li>
     </ul>
   </section>
-
 
   <section class="slide" id="webslides">
     <h2>Slides with the power of websites</h2>
@@ -188,28 +187,6 @@
     </svg>
   </section>
 
-  <section class="slide" id="embedding">
-    <h2>Embedding multimedia</h2>
-
-    <p>Webslides offer integration with the Web</p>
-    <ul>
-      <li>YouTube</li>
-      <li>Twitter</li>
-      <li>Interactive webtools</li>
-    </ul>
-  </section>
-
-  <section class="slide" id="youtube">
-    <h2>YouTube</h2>
-    <iframe width="800" height="450" src="https://www.youtube.com/embed/C3WzPD2iMKc?start=475&amp;end=486&amp;rel=0&amp;showinfo=0&amp;autohide=1" allowfullscreen></iframe>
-  </section>
-
-  <section class="slide" id="earthquake">
-    <h2>Verken data via een 3D animatie</h2>
-    <!-- Was: http://labs.gmt.io/quake/ -->
-    <iframe width="800" height="450" src="https://ows.florian.dejonckhee.re/quake/"></iframe>
-  </section>
-
   <section class="slide" id="open-source">
     <h2>Co-creation via open-source</h2>
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="930" height="440">
@@ -322,57 +299,13 @@
     </ul>
   </section>
 
-  <section class="slide" id="responsibilities">
-    <h2>Internship responsibilities</h2>
-
-    <ul>
-      <li>Development of an <strong>MVP</strong></li>
-      <li>Supporting <strong>ERASMUS+</strong> projects</li>
-    </ul>
-  </section>
-
-  <section class="slide" id="jasper">
-    <h2>Jasper</h2>
-
-    Analysis, design and implementation of frontend functionality
-    <ul>
-      <li>ES6 JavaScript</li>
-      <li>React</li>
-      <li>Redux</li>
-      <li>Webpack, babel, JSX</li>
-    </ul>
-  </section>
-
-  <section class="slide" id="florian">
-    <h2>Florian</h2>
-
-    Analysis, design and implementation of backend functionality
-    Smaller frontend functionality
-    <ul>
-      <li>Ruby on Rails</li>
-      <li>Redis</li>
-      <li>Docker</li>
-    </ul>
-  </section>
-
-  <section class="slide" id="scrum">
-    <h2>Development workflow</h2>
-
-    <ul>
-      <li>Agile framework: scrum</li>
-      <li>Stand-up, Kanban</li>
-      <li>6 sprints of two weeks</li>
-      <li>Easter: milestone demo</li>
-    </ul>
-  </section>
-
   <section class="black title slide" id="demo">
     <h2>Questions</h2>
   </section>
 
   <div class="progress"></div>
   <footer class="badge">
-    <a href="https://github.com/OpenWebslides/presentatie-hogent">Fork me on GitHub</a>
+    <a href="https://github.com/OpenWebslides/cocos-madrid">Fork me on GitHub</a>
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/shower-core/2.1.0/shower.min.js"></script>
