--- a/index.html
+++ b/index.html
@@ -290,14 +290,35 @@
     </svg>
   </section>
 
-  <section class="slide" id="platform">
-    <h2>Platform for webslides</h2>
-    <ul>
-      <li><strong>Collaboration</strong> on course content</li>
-      <li>Open for <strong>teachers</strong> and <strong>students</strong></li>
-      <li><strong>Accessible</strong> for everyone</li>
-    </ul>
-  </section>
+	<section class="slide" id="platform">
+		<h2>Open Webslides platform</h2>
+		<ul>
+			<li>Open source platform to create <strong>course content</strong></li>
+			<li>Enabled <strong>collaboration</strong> and <strong>co-creation</strong></li>
+			<li>Focus on <strong>content</strong> rather than appearance</li>
+		</ul>
+	</section>
+
+	<section class="slide" id="timeline">
+		<h2>Timeline</h2>
+		<ul>
+			<li><strong>Now:</strong> development phase</li>
+			<li>
+				<strong>June 2018:</strong> course content editor
+				<ul>
+					<li>Export as slides or full-text course</li>
+					<li>No co-creation</li>
+				</ul>
+			</li>
+			<li>
+				<strong>Summer/fall 2018</strong>: co-creation
+				<ul>
+					<li>Annotations</li>
+					<li>Integration of changes by students</li>
+				</ul>
+			</li>
+		</ul>
+	</section>
 
   <section class="black title slide" id="demo">
     <h2>Questions</h2>
