--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>
       <a href="https://be.linkedin.com/in/estherdeloof/">Esther De Loof</a> &amp;
       <a href="https://florian.dejonckhee.re/">Florian Dejonckheere</a>,
-      <a href="http://www.ugent.be/">Universiteit Gent</a>
+      <a href="http://www.ugent.be/">Ghent University</a>
     </p>
   </header>
 
@@ -296,6 +296,16 @@
 			<li>Open source platform to create <strong>course content</strong></li>
 			<li>Enabled <strong>collaboration</strong> and <strong>co-creation</strong></li>
 			<li>Focus on <strong>content</strong> rather than appearance</li>
+		</ul>
+	</section>
+	
+	<section class="slide" id="mockups">
+		<h2>Open Webslides concept</h2>
+		<ul>
+			<li>Let's have a look at the current concept for the <strong>webpage</strong></li>
+			<li>Is there any <strong>information</strong> or <strong>functionality</strong> missing?</li>
+			<li>Let's have a look at the current concept for the <strong>editor</strong></li>
+			<li>Is this the level of <strong>accessibility</strong> you expected?</li>
 		</ul>
 	</section>
 
