--- a/index.html
+++ b/index.html
@@ -294,11 +294,16 @@
 		<h2>Open Webslides platform</h2>
 		<ul>
 			<li>Open source platform to create <strong>course content</strong></li>
-			<li>Enabled <strong>collaboration</strong> and <strong>co-creation</strong></li>
+			<li>Enables <strong>collaboration</strong> and <strong>co-creation</strong></li>
 			<li>Focus on <strong>content</strong> rather than appearance</li>
+			<li>
+				Easily export courses in various <strong>formats</strong>
+				<ul>
+					<li>Slides, hand-outs, full text course, ...</li>
+				</ul>
 		</ul>
 	</section>
-	
+
 	<section class="slide" id="mockups">
 		<h2>Open Webslides concept</h2>
 		<ul>
